# s3proxy-rs

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.debug  Makefile  QUICKSTART.md  README-DOCKER.md  README.md  docker-compose.override.yaml.example  docker-compose.yaml  pom.xml  requirements-test.txt  test_s3proxy_boto3.py
.cursor/rules/: s3proxy-rule.mdc
.github/workflows/: ci-main.yml
deploy/: aws-irsa-setup.md  azure-workload-identity-setup.md  gcp-workload-identity-setup.md  k8s.yaml  rbac.yaml
examples/: config-aws.toml  config-azure.toml  config-gcp.toml
scripts/: build-and-push.sh  setup-minio-bucket.sh  test-minio.sh
src/: config.rs  errors.rs  main.rs  metrics.rs
src/routes/: handlers.rs  mod.rs
src/s3/: mod.rs
src/server/: mod.rs
src/storage/: aws.rs  azure.rs  gcp.rs  mod.rs
